# 10braincells

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  asan-suppress.txt  todo.txt
cmake/: codegen.cmake  current_arch.sh  submodule_build.cmake  submodules_init.cmake
codegen/: CMakeLists.txt  as_tuple.cpp  cg_generate.hpp  enum_class.hpp  flags.cpp  helpers.hpp  struct.hpp  vulkan.cpp
codegen/vulkan/: class.hpp  commands.hpp  constants.hpp  enum_generator.hpp  function_type.hpp  helpers.hpp  structs.hpp  types.hpp
examples/: CMakeLists.txt  coro_test.cpp  fs_watch.cpp  hello_triangle.cpp  hello_triangle_index_buffer.cpp  hello_triangle_modernized.cpp  mouse_client.cpp  mouse_streamer.cpp  vulkan_init.cpp
junk/: test2.cpp
src/: CMakeLists.txt  config.hpp  engine.hpp  event_groups.hpp  input_mgr.hpp
src/core/: CMakeLists.txt  aggregate_exception.hpp  any_holder.hpp  array.hpp  assert.hpp  base_types.hpp  basic_types.hpp  begin_end.hpp  bit.hpp  bits.hpp  box.hpp  byteconv.hpp  byteview.hpp  compact_hashes.hpp  constants.hpp  construct_at.hpp  ct_str.hpp  ebo.hpp  enum_introspect.hpp  epoller.hpp  errc.hpp  errc_exception.hpp  exception.hpp  exception_guard.hpp  exec.hpp  finalizer.hpp  finalizers.hpp  fixed_vector.hpp  flags.hpp  floating_point.hpp  function.hpp  generator.hpp  hash.hpp  incbin.hpp  int_const.hpp  int_parse.hpp  io.hpp  limits.hpp  loophole.hpp  macros.hpp  (+14 more)
src/core/async/: async_generator.hpp  awaitable.hpp  awaitable_type.hpp  cancel.hpp  cancelation_point.hpp  close.hpp  concurrent.hpp  ctx.hpp  ignore_result.hpp  inotify_ctx.hpp  inotify_watch.hpp  main.hpp  open.hpp  read.hpp  readdir.hpp  runner.hpp  sleep.hpp  statx.hpp  task.hpp  wait_all.hpp  waitid.hpp  write.hpp
src/core/async/sys/: cancel.hpp  close.hpp  inotify_ctx.hpp  inotify_watch.hpp  open.hpp  read.hpp  readdir.hpp  sleep.hpp  statx.hpp  waitid.hpp  write.hpp
src/core/async/util/: dir_watch.hpp  recursive_dir_watch.hpp
src/core/concepts/: char_type.hpp  convertible_to.hpp  ctor.hpp  floating_point.hpp  integral.hpp  nothrow_ctor.hpp  number.hpp  pointer.hpp  ptr_to_trivial.hpp  string.hpp  trivial.hpp  trivial_assign.hpp  trivial_ctor.hpp  trivial_dtor.hpp  trivial_span_like.hpp
src/core/coro/: async_generator.hpp  awaitable.hpp  coro_handle_metainfo.hpp  task.hpp  wait_all.hpp
src/core/io/: CMakeLists.txt  basic_types.hpp  concepts.hpp  deduce_backend_type.hpp  exceptions.hpp  file.hpp  file_content.hpp  file_view.hpp  flags.hpp  helpers.hpp  impl.hpp  in.hpp  in_base.hpp  infd.hpp  lib.hpp  mmap.hpp  mmap_file_content.hpp  out.hpp  out_base.hpp  outfd.hpp  rw_impl.hpp  rw_impl_buff_ref.hpp  std.hpp  types.hpp
src/core/io/uring/: ctx.hpp  flags.hpp  structs.hpp
src/core/meta/: init.hpp  loophole.hpp  overload_resolution.hpp  type.hpp  type_list.hpp
src/core/nostd/: basic_types.hpp  ebo.hpp  exception.hpp  int_const.hpp  limits.hpp  opt.hpp  tuple.hpp  var.hpp
src/core/nostd/concepts/: any_of.hpp  assign.hpp  inheritance.hpp  integral.hpp  invocable.hpp  (+5 more)
src/core/ranges/: fold.hpp  index.hpp  inward.hpp  range.hpp  split.hpp  subst.hpp  to.hpp  transform.hpp  trim.hpp  zip.hpp
src/core/string/: path.hpp
src/core/traits/: add_const.hpp  add_cv.hpp  add_ptr.hpp  add_volatile.hpp  ca_traits.hpp  common_ref.hpp  common_type.hpp  conditional.hpp  copy_cv.hpp  copy_cvref.hpp  decay.hpp  fields_count.hpp  invoke.hpp  is_array.hpp  is_class.hpp  is_const.hpp  is_destructible.hpp  is_enum.hpp  is_ref.hpp  make_signed.hpp  remove_const.hpp  remove_cvref.hpp  remove_ptr.hpp  remove_ref.hpp  type_at_idx.hpp  underlying_type.hpp  void_t.hpp
src/core/utility/: as_const.hpp  bind_member.hpp  idx_dispatch.hpp  int_seq.hpp  move.hpp  overloaded.hpp
src/grx/: CMakeLists.txt  basic_types.hpp  bone_vertex.hpp  camera.hpp  color.hpp  color_utils.hpp  image.hpp  postprocess.hpp  stb_sources.hpp  texture.hpp  texture_old.hpp  using_std.hpp  vbo.hpp  vk.hpp
src/grx/gl/: gl_ctx.hpp  gl_postprocess_mgr.hpp  gl_program.hpp  gl_render_targets.hpp  gl_shader.hpp  gl_shader_basic.hpp  gl_texture.hpp  gl_uniform.hpp  gl_uniform_functions.hpp  gl_vao.hpp  gl_vbo.hpp  gl_window.hpp  glfw_ctx_mapper.hpp
src/grx/vk/: arg.hpp  command_buffer.hpp  device.hpp  extension_defines.hpp  extensions.hpp  info.hpp  instance.hpp  lib.hpp  logging.hpp  macro.hpp  result.hpp  surface.hpp  uniq_string_buff.hpp  version.hpp
src/inp/: generic_mouse.hpp  glfw_mouse.hpp  key_rt_state.hpp  key_switch_state.hpp  mouse.hpp  native_mouse.hpp  relative_rt_state.hpp  state_block.hpp
src/net/: data_mapper.hpp  full_addr.hpp  full_addr_any.hpp  ip_addr.hpp  ip_addr_any.hpp  ip_ver.hpp  net_error.hpp  transferable.hpp  udp_socket.hpp
src/sys/: basic_types.hpp  chrono.hpp  close.hpp  dirent.hpp  dup.hpp  epoll.hpp  event.hpp  eventfd.hpp  eventfd_flags.hpp  execve.hpp  fork.hpp  ftruncate.hpp  inotify.hpp  inotify_flags.hpp  inotify_watch_flags.hpp  lseek.hpp  map_flags.hpp  map_prot.hpp  memfd_create.hpp  memfd_flags.hpp  memfd_secret.hpp  mmap.hpp  open.hpp  open_flags.hpp  pidfd_open.hpp  pidfd_open_flags.hpp  pipe.hpp  poll.hpp  pthread_unsafe.hpp  read.hpp  readdir.hpp  remap_flags.hpp  siginfo.hpp  signal.hpp  signalfd.hpp  sigprocmask.hpp  statx.hpp  statx_types.hpp  syscall.hpp  wait_flags.hpp  (+2 more)
src/util/: arg_parse.hpp  assert.hpp  basic_types.hpp  fps_counter.hpp  inotify.hpp  log.hpp  math.hpp  print.hpp  ring_buffer.hpp  tbc_main.hpp  time.hpp  using_std.hpp  vec.hpp  vec_macro_gen.hpp
src/util/log/: log_handler_base.hpp  log_handler_fd.hpp  log_handler_ring.hpp  logger.hpp
src/util/ranges/: dimensional_seq.hpp
tests/: CMakeLists.txt
tests/codegen/: CMakeLists.txt  member_functions.cpp
tests/core/: CMakeLists.txt  args.cpp  byteconv.cpp  ca_traits.cpp  concepts.cpp  function.cpp  generator.cpp  int_const.cpp  io.cpp  loophole.cpp  meta.cpp  move_copy_assign_ctor.hpp  opt.cpp  ptr_map.cpp  ranges.cpp  string.cpp  traits.cpp  tuple.cpp  utility.cpp  var.cpp
tests/nostd/: CMakeLists.txt  concepts.cpp  int_const.cpp  meta.cpp  traits.cpp  tuple.cpp  utility.cpp  var.cpp
tools/: compodb
(+19 files in other folders)
